--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: 'Raleway', sans-serif;
     margin: 0;
@@ -6,29 +7,36 @@ ul {
     padding: 0; 
     list-style: none;
 }
-header {
-    height: 60vh;
+header#header {
+    height: 100vh;
     padding: 10vh 20vmax 0;
     box-sizing: content-box
 }
-header > p {
+#header > p {
     text-align: center;
 }
-header > .myself {
+.header-group {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 0 15%;
 }
-section {
-    margin-top: 10vh;
-}
-h1 {
+.name {
     font-size: 82px;
     color: #222;
 }
-nav {
+.surname {
+    display: block;
+    margin: -20px;
+    padding-left: 10vmin;
+}
+nav#navbar {
     margin-top: 10px;
+}
+footer {
+    width: 100%;
+    height: 10vh;
+    background: #000;
 }
 .navbar-list {
     display: flex;
@@ -43,6 +51,7 @@ nav {
 }
 
 .navbar-list-item > a {
+    color: #4c4c4c;
     text-decoration: none;
 }
 
@@ -63,11 +72,6 @@ nav {
 .navbar-list-item:hover > a::after {
     width: 100%;
 }
-.surname {
-    display: block;
-    margin: -20px;
-    padding-left: 10vmin;
-}
 .social-media {
     position: absolute;
     top: 0;
@@ -81,7 +85,7 @@ nav {
 .social-media-item:hover {
     transform: scale(1.1);
 }
-.cool-sentence {
+.header-sentence {
     display: inline-block;
     width: 80%;
     margin: 0 10%;
