--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,14 @@ ul {
 }
 header#header {
     height: 100vh;
-    padding: 10vh 20vmax 0;
-    box-sizing: content-box
+    padding-top: 20vh;
+    box-sizing: border-box
 }
 #header > p {
+    display: block;
     text-align: center;
+    width: 50%;
+    margin: 0 auto;
 }
 .header-group {
     display: flex;
@@ -80,7 +83,8 @@ footer {
 .social-media-item {
     display: inline-block;
     margin: 5px 15px;
-    filter: invert(100%);
+    background-color: #fff;
+    padding: 5px;
 }
 .social-media-item:hover {
     transform: scale(1.1);
@@ -91,4 +95,25 @@ footer {
     margin: 0 10%;
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
+}
+section.content-section {
+    width: 60vw;
+    margin: 0 auto;
+}
+h2.content-header {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 40px;
+}
+.header-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: url("http://wallpapercave.com/wp/AJfAZuY.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    -webkit-clip-path: polygon(80% 0, 100% 0, 84% 100%, 70% 100%);
+clip-path: polygon(80% 0, 100% 0, 84% 100%, 70% 100%);
 }
