--- a/css/main.css
+++ b/css/main.css
@@ -1,70 +1,80 @@
-
 body {
+    font-size: 16px;
     font-family: 'Raleway', sans-serif;
     margin: 0;
 }
+
 ul {
-    padding: 0; 
+    padding: 0;
     list-style: none;
 }
+
+a {
+    text-decoration: none;
+    color: #047ca5;
+}
+
 header#header {
     height: 100vh;
-    padding-top: 20vh;
+    padding: 25vh 0;
     box-sizing: border-box
 }
-#header > p {
-    display: block;
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
-}
+
 .header-group {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 0 15%;
 }
+
 .name {
-    font-size: 82px;
+    font-size: 5.1em;
     color: #222;
 }
+
 .surname {
     display: block;
     margin: -20px;
     padding-left: 10vmin;
 }
+
 nav#navbar {
     margin-top: 10px;
 }
+
 footer {
     width: 100%;
     height: 10vh;
     background: #000;
 }
+
 .navbar-list {
     display: flex;
     justify-content: center
 }
+
 .navbar-list-item {
     display: inline-block;
     color: #ddd;
-    font-size: 14px;
+    font-size: .9em;
     padding: 0 10px;
     text-transform: uppercase;
 }
 
-.navbar-list-item > a {
+.navbar-list-item>a {
     color: #4c4c4c;
     text-decoration: none;
 }
 
-.navbar-list-item > a:visited {
+.navbar-list-item>a:visited {
     color: #4c4c4c;
 }
-.navbar-list-item > a:hover {
+
+.navbar-list-item>a:hover {
     color: #000;
 }
-.navbar-list-item > a::after {
+
+.navbar-list-item>a::after {
     content: "";
     display: block;
     background-color: #424242;
@@ -72,48 +82,65 @@ footer {
     width: 0;
     transition: 200ms ease all;
 }
-.navbar-list-item:hover > a::after {
+
+.navbar-list-item:hover>a::after {
     width: 100%;
 }
+
 .social-media {
     position: absolute;
     top: 0;
     right: 5vmin;
 }
+
 .social-media-item {
     display: inline-block;
     margin: 5px 15px;
-    background-color: #fff;
-    padding: 5px;
 }
+
 .social-media-item:hover {
     transform: scale(1.1);
 }
+
 .header-sentence {
-    display: inline-block;
-    width: 80%;
-    margin: 0 10%;
+    display: block;
+    text-align: center;
+    width: 40%;
+    margin: 0 auto;
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
 }
+
 section.content-section {
     width: 60vw;
     margin: 0 auto;
 }
+
 h2.content-header {
     text-transform: uppercase;
     text-align: center;
-    font-size: 40px;
+    font-size: 2em;
 }
+
 .header-background {
     position: absolute;
     top: 0;
     left: 0;
-    background: url("http://wallpapercave.com/wp/AJfAZuY.jpg");
+    background: url("../img/background.jpg");
     background-size: cover;
     width: 100%;
     height: 100%;
     z-index: -1;
-    -webkit-clip-path: polygon(80% 0, 100% 0, 84% 100%, 70% 100%);
-clip-path: polygon(80% 0, 100% 0, 84% 100%, 70% 100%);
+    -webkit-clip-path: polygon(0 0, 64% 0, 16% 100%, 0% 100%);
+    clip-path: polygon(0 0, 64% 0, 16% 100%, 0% 100%);
+}
+
+.email {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    font-weight: 600;
+    font-size: .8em;
+    color: #222;
+    margin: 0;
 }
